<resources>
    <string name="app_name">AppIntroduction</string>
    <string name="toolbar_text">MAIN</string>
    <string name="ok">확인</string>

    <!--리사이클러뷰-->
    <string name="name">이 름</string>
    <string name="grade">학 력</string>
    <string name="assign">담 당</string>

    <!--메뉴 4개-->
    <string name="menu1">1. 당뇨그루에 대해</string>
    <string name="menu2">2. 버전정보</string>
    <string name="menu2_0">버전정보</string>
    <string name="menu3">3. 개발자정보</string>
    <string name="menu4">4. Change log</string>


    <!--메뉴 1. 인트로 내용-->
    <string name="Intro_content">안녕하세요! ‘당뇨그루’는 강원대학교 전자공학전공 E-LAB 연구실에서 차세대 당뇨 자기관리 연구를 위한 당뇨 자기관리 프로젝트입니다.

한국은 당뇨병 유병률이 꾸준히 증가하고 있으며 더 이상의 개인 질병이 아닌 중요한 국면 질환이 되었습니다.
당뇨병은 약물치료뿐만 아니라 식단과 운동, 혈당관리 등의 자기관리가 매우 중요합니다.
이를 앱으로 쉽고 간편하게 실시간 확인하며 피드백하기 위하여 앱 개발을 시작하였습니다.
당뇨그루는 당뇨 자기관리를 위한 식이요법 관리, 운동관리, 투약, 신체 활동을 기존의 방식에서 벗어난 차세대 프로젝트로 환자의 무자각 상태에서 당뇨그루에서 개발한 자동 기록 디바이스를 통해 자동 전송 및 기록되어 불편함을 해소할 것입니다,

식이요법 관리 애플리케이션은 스마트 식판을 자체 제작하여 저희의 식품교환표에 매칭하여 식단의 칼로리 정보를 알려줍니다. 이를 토대로 사용자는 부족한 식품요소를 확인, 균형 잡힌 식사를 구성할 수 있습니다. 애플리케이션으로 사진 전송을 하여 기록도 가능합니다.
운동 앱은 에르고미터, 트레드밀과 연동하여 사용자의 운동 시간, 속도, 소모 칼로리 등을 확인하고 저장할 수 있습니다. 각자 태그를 이용하여 사용자별로 저장 가능하며 장치를 두고 운동한 경우 연결 시 운동했던 데이터 수신이 가능합니다.
투약 앱은 니들 저장 케이스를 제작하여 니들 잔여 개수를 확인 가능하고 사용 시 카운팅합니다. 동시에 애플리케이션으로 투여 약품과 투여 시간을 전송합니다. 사용자가 투여할 시간을 설정하는 알람 기능도 추가하였습니다.
신체 활동은 웨어러블형 밴드와 연결하여 사용자의 실시간 심박수를 수신하여 확인할 수 있습니다, 추후에는 자기관리를 위한 방식 모든 기능을 업데이트할 예정이니 많은 관심 부탁드립니다.
추가로 당뇨병에 관한 정보와 용어를 설명해주는 교육용 애플리케이션도 있습니다.

앱 메뉴에 앱 정보와 개발자 정보, 사용법을 포함하였으니 한 번씩 읽어주시기 바랍니다.
앱 내용 및 디자인의 모든 것은 사용자를 위하여 제작하였으며, 무자각 상태에서 자동 전송과 기록 그리고 사용자의 편리함을 우선시하였습니다.
이 앱을 사용함으로써 당뇨인들의 당뇨 지식이 향상되고 자기관리수준이 높아지길 기대합니다.
</string>

    <!--임시 : 최신입니다.-->
    <string name="update_good">현재 버전은 최신입니다.</string>

    <!--개발자정보-->
    <!--ex-->
    <string name="develop_name0">뿡뿡이</string>
    <string name="develop_grade0">강원대학교 전자공학전공 3학년</string>
    <string name="develop_email0">abdcdefg123456@daum.net</string>
    <string name="develop_call0">010-0000–0000</string>
    <string name="develop_assign0">총괄</string>
    <!--1-->
    <string name="develop_name1">양지훈</string>
    <string name="develop_grade1">강원대학교 전자공학전공 4학년</string>
    <string name="develop_email1">kms6742@naver.com</string>
    <string name="develop_call1">010-5104-7274</string>
    <string name="develop_assign1">교육 앱 제작</string>
    <!--2-->
    <string name="develop_name2"></string>
    <string name="develop_grade2"></string>
    <string name="develop_email2"></string>
    <string name="develop_call2"></string>
    <string name="develop_assign2"></string>
    <!--3-->
    <string name="develop_name3"></string>
    <string name="develop_grade3"></string>
    <string name="develop_email3"></string>
    <string name="develop_call3"></string>
    <string name="develop_assign3"></string>
</resources>
